Fix grid verticle alignment

--- a/app/assets/stylesheets/base/grid.scss
+++ b/app/assets/stylesheets/base/grid.scss
@@ -1,6 +1,11 @@
-.flex-grid .col {
+.flex-grid {
+  display: flex;
+}
+
+.flex-grid-col {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .flex-grid-thirds {
