--- a/app/assets/stylesheets/styles/splash.scss
+++ b/app/assets/stylesheets/styles/splash.scss
@@ -1,5 +1,5 @@
 .splash {
-
+  height: 35em;
 }
 
   .splash h1 {
